--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/">
     <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +18,8 @@
     
     <!-- Required for http -->
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <!-- Required for routing -->
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
     
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
